@@ -5,6 +5,7 @@ Added
     Backup & Restore Containers (#89)
     Browse, upload & delete container files (#132)
     Show if container is in deployment with link to deployment on container view
+    Allow setting server alias when adding (#134) 
 
 Changed
     Show memory as graph instead of as table
